Alterei CSS do menu projetos

--- a/projects.html
+++ b/projects.html
@@ -25,19 +25,19 @@
 
         <h2>Projetos</h2>
         <br/><br/>
-        <button id="devBtn" class="underlined" onclick="openDev()">_______Programação</button>
+        <button id="devBtn" onclick="openDev()">_______Programação</button>
         <div style="display: none;" id="dev">
-            <a id="contactListBtn" class="openModal">Lista de contato</a><span style="font-size: 170%;"> <<</span><br/>
-            <a id="dressUpBtn" class="openModal">Jogo de vestir</a><span style="font-size: 170%;"> <<</span><br/>
-            <a id="ecommerceBtn" class="openModal">E-commerce</a><span style="font-size: 170%;"> <<</span><br/>
-            </div>
-        <button id="wireframesBtn" class="underlined" onclick="openWireframes()">________Wireframes</button>
-        <div style="display: none;" id="wireframes">
-            <a id="mapModalBtn" class="openModal">Mapa campus</a><span style="font-size: 170%;"> <<</span><br/>
-            <a id="diModalBtn" class="openModal">DI Direto</a><span style="font-size: 170%;"> <<</span><br/>
+            <a id="contactListBtn">Lista de contato</a><span style="font-size: 170%;"> <<</span><br/>
+            <a id="dressUpBtn">Jogo de vestir</a><span style="font-size: 170%;"> <<</span><br/>
+            <a id="ecommerceBtn">E-commerce</a><span style="font-size: 170%;"> <<</span><br/>
         </div>
-        <button id="drawingsBtn" class="openModal">_______Ilustrações</button>
-        <button id="othersBtn" class="openModal">____________Outros</button>
+        <button id="wireframesBtn" onclick="openWireframes()">________Wireframes</button>
+        <div style="display: none;" id="wireframes">
+            <a id="mapModalBtn">Mapa campus</a><span style="font-size: 170%;"> <<</span><br/>
+            <a id="diModalBtn">DI Direto</a><span style="font-size: 170%;"> <<</span><br/>
+        </div>
+        <button id="drawingsBtn">_______Ilustrações</button>
+        <button id="othersBtn">____________Outros</button>
     </div>
 
     <div id="modalBackground">
