Display de ilustrações ok

--- a/about.html
+++ b/about.html
@@ -25,12 +25,12 @@
         <h2>Sobre mim</h2>
         <h3>Programadora em formação, ilustradora freelancer e cantora de chuveiro.</h3>
         <br/><br/>
-        <h3>Ainda curioso?</h3><br/>
-        <div style="display: inline;">
-            <button onclick="location.href='assets/curriculo.PDF'" class="underlined" style="white-space: nowrap">Acesse o meu currículo</button><br/><br/>
-            <button onclick="location.href='https://open.spotify.com/user/外国人の魔女'">ou <span class="underlined">conheça o meu<br/>gosto musical</span></button>
+        <div style="display: inline">
+            <h3 style="display: inline">Ainda curioso? Que tal<br/> ler o</h3>
+            <button onclick="location.href='assets/curriculo.PDF'" style="display: inline">meu currículo</button>
+            <h3 style="display: inline">ou ouvir as</h3>
+            <button onclick="location.href='https://open.spotify.com/user/外国人の魔女'">minhas playlists?</button>
         </div>
-    </div>
 
     <div id="about"></div>
     <script src="script.js"></script>
