--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h3 id="whiteline" class="intro">oi, eu sou amanda.<br/>mas pode me chamar de</h3>
     <h1 id="whiteline" class="name">BLO<span style="font-family: Night; font-size: 81%;">O</span>M!</h1>
 
-    <h3 class="intro">oi, eu sou amanda.<br/>mas pode me chamar de</h3>
+    <h3 class="intro">oi, eu sou Amanda,<br/>mas pode me chamar de</h3>
     <h1 class="name">BLO<span style="font-family: Night; font-size: 81%;">O</span>M!</h1>
 
     <div id="about"></div>
