Atualizações nos projetos

--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
         <br/><br/>
         <button id="devBtn" onclick="openDev()">_______Programação</button>
         <div style="display: none;" id="dev">
-            <a id="contactListBtn">Lista de contato</a><span style="font-size: 170%;"> <<</span><br/>
+            <a id="contactListBtn">Lista de contatos</a><span style="font-size: 170%;"> <<</span><br/>
             <a id="dressUpBtn">Jogo de vestir</a><span style="font-size: 170%;"> <<</span><br/>
             <a id="ecommerceBtn">E-commerce</a><span style="font-size: 170%;"> <<</span><br/>
             </div>
@@ -43,23 +43,54 @@
     <div id="modalBackground" onclick="close()">
         <div id="contactListModal" class="modal">
             <div style="width: 100%; display: flex; justify-content: center;"><button id="contactListClose" class="close">fechar</button></div>
-            <p>AAAAAA</p>
+            <h2 class="projectTitle">Lista de Contatos</h2>
+            <h3 style="font-weight: normal"><b>Tecnologias utilizadas:</b> HTML, CSS, JavaScript</h3>
+            <div style="display: inline;">
+                <a style="display: inline;" class="linkHover" href="https://amndrocha.github.io/CRUD-Contatos/">Deploy</a>
+                <h3 style="display: inline;"> // </h3>
+                <a style="display: inline;" class="linkHover" href="https://github.com/amndrocha/CRUD-Contatos">Código fonte</a>
+            </div>
         </div>
         <div id="dressUpModal" class="modal">
             <div style="width: 100%; display: flex; justify-content: center;"><button id="dressUpClose" class="close">fechar</button></div>
-            <p>AAAAAA</p>
+            <h2 class="projectTitle">Jogo de vestir</h2>
+            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/KLhyW_HlK-w?si=QM59pT_H5CpUccpm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <h3 style="font-weight: normal"><b>Tecnologias utilizadas:</b> HTML, CSS, JavaScript</h3>
+            <div style="display: inline;">
+                <a style="display: inline;" id="unavailable">Deploy</a>
+                <h3 style="display: inline;"> // </h3>
+                <a style="display: inline;" class="linkHover" href="https://github.com/amndrocha/Jogo-de-vestir">Código fonte</a>
+            </div>
         </div>
         <div id="ecommerceModal" class="modal">
             <div style="width: 100%; display: flex; justify-content: center;"><button id="ecommerceClose" class="close">fechar</button></div>
-            <p>AAAAAA</p>
+            <h2 class="projectTitle">Protótipo E-Commerce</h2>
+            <h3 style="font-weight: normal"><b>Tecnologias utilizadas:</b> HTML, CSS, JavaScript, React</h3>
+            <div style="display: inline;">
+                <a style="display: inline;" id="unavailable">Deploy</a>
+                <h3 style="display: inline;"> // </h3>
+                <a style="display: inline;" class="linkHover" href="">Código fonte</a>
+            </div>
         </div>
         <div id="mapModal" class="modal">
             <div style="width: 100%; display: flex; justify-content: center;"><button id="mapClose" class="close">fechar</button></div>
-            <p>AAAAAA</p>
+            <h2 class="projectTitle">Mapa do Campus</h2>
+            <h3 style="font-weight: normal"><b>Descrição:</b> HTML, CSS, JavaScript, React</h3>
+            <div style="display: inline;">
+                <a style="display: inline;" class="linkHover" href="https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=wireframes%20e%20molic%20-%20subgrupo%201.drawio#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D1MHzIo-Lrab8iHoO62nN6uhHW72ZEAqcg%26export%3Ddownload">Diagrama MOLIC</a>
+                <h3 style="display: inline;"> // </h3>
+                <a style="display: inline;" class="linkHover" href="https://www.figma.com/file/wNNeuRm7cpIP7x6tOtvuIn/Projeto-Mapa-PUC?type=design&mode=design&t=LnVhE9KQcGUqipWH-1">Projeto Figma</a>
+            </div>
         </div>
         <div id="diModal" class="modal">
             <div style="width: 100%; display: flex; justify-content: center;"><button id="diClose" class="close">fechar</button></div>
-            <p>AAAAAA</p>
+            <h2 class="projectTitle">DI Direto</h2>
+            <h3 style="font-weight: normal"><b>Descrição:</b> HTML, CSS, JavaScript, React</h3>
+            <div style="display: inline;">
+                <a style="display: inline;" id="unavailable">Diagrama MOLIC</a>
+                <h3 style="display: inline;"> // </h3>
+                <a style="display: inline;" class="linkHover" href="https://www.figma.com/file/VCrRV3juys8yKs529AsodN/Wireframes---DI-Direto?type=design&node-id=0%3A1&mode=design&t=LnVhE9KQcGUqipWH-1">Projeto Figma</a>
+            </div>
         </div>
         <div id="drawingsModal" class="modal">
             <div style="width: 100%; display: flex; justify-content: center;"><button id="drawingsClose" class="close">fechar</button></div>
