--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,7 @@
         <div id="contactListModal" class="modal">
             <div style="width: 100%; display: flex; justify-content: center;"><button id="contactListClose" class="close">fechar</button></div>
             <h2 class="projectTitle">Lista de Contatos</h2>
+            <img class="projectImg" src="assets/contacts.png"/>
             <h3 style="font-weight: normal"><b>Tecnologias utilizadas:</b> HTML, CSS, JavaScript</h3>
             <div style="display: inline;">
                 <a style="display: inline;" class="linkHover" href="https://amndrocha.github.io/CRUD-Contatos/">Deploy</a>
@@ -64,7 +65,7 @@
         </div>
         <div id="ecommerceModal" class="modal">
             <div style="width: 100%; display: flex; justify-content: center;"><button id="ecommerceClose" class="close">fechar</button></div>
-            <h2 class="projectTitle">Protótipo E-Commerce</h2>
+            <h2 class="projectTitle">E-Commerce</h2>
             <h3 style="font-weight: normal"><b>Tecnologias utilizadas:</b> HTML, CSS, JavaScript, React</h3>
             <div style="display: inline;">
                 <a style="display: inline;" id="unavailable">Deploy</a>
@@ -75,7 +76,8 @@
         <div id="mapModal" class="modal">
             <div style="width: 100%; display: flex; justify-content: center;"><button id="mapClose" class="close">fechar</button></div>
             <h2 class="projectTitle">Mapa do Campus</h2>
-            <h3 style="font-weight: normal"><b>Descrição:</b> HTML, CSS, JavaScript, React</h3>
+            <img class="projectImg" src="assets/map.png"/>
+            <h3 style="font-weight: normal"><b>Descrição:</b> Wireframes criadas para projeto de aplicativo de navegação acessível pelo campus da PUC-Rio.</h3>
             <div style="display: inline;">
                 <a style="display: inline;" class="linkHover" href="https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=wireframes%20e%20molic%20-%20subgrupo%201.drawio#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D1MHzIo-Lrab8iHoO62nN6uhHW72ZEAqcg%26export%3Ddownload">Diagrama MOLIC</a>
                 <h3 style="display: inline;"> // </h3>
@@ -85,7 +87,8 @@
         <div id="diModal" class="modal">
             <div style="width: 100%; display: flex; justify-content: center;"><button id="diClose" class="close">fechar</button></div>
             <h2 class="projectTitle">DI Direto</h2>
-            <h3 style="font-weight: normal"><b>Descrição:</b> HTML, CSS, JavaScript, React</h3>
+            <img class="projectImg" src="assets/di.png"/>
+            <h3 style="font-weight: normal"><b>Descrição:</b> Wireframes criadas para projeto de site de notícias destinado a alunos de computação.</h3>
             <div style="display: inline;">
                 <a style="display: inline;" id="unavailable">Diagrama MOLIC</a>
                 <h3 style="display: inline;"> // </h3>
