--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     
     <div class="middle">
         <h2>Sobre mim</h2>
-        <h3>Programadora em formação, ilustradora freelancer e cantora de chuveiro.</h3>
+        <h3 style="text-align: end;">Programadora em formação, ilustradora freelancer e cantora de chuveiro.</h3>
         <br/><br/>
         <div style="display: inline">
             <h3 style="display: inline">Ainda curioso? Que tal<br/> ler o</h3>
