--- a/projects.html
+++ b/projects.html
@@ -66,6 +66,7 @@
         <div id="ecommerceModal" class="modal">
             <div style="width: 100%; display: flex; justify-content: center;"><button id="ecommerceClose" class="close">fechar</button></div>
             <h2 class="projectTitle">E-Commerce</h2>
+            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/Hn4fWLXW0VQ?si=PmvsprJqfnWZO_dx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <h3 style="font-weight: normal"><b>Tecnologias utilizadas:</b> HTML, CSS, JavaScript, React</h3>
             <div style="display: inline;">
                 <a style="display: inline;" id="unavailable">Deploy</a>
@@ -105,7 +106,7 @@
         </div>
         <div id="othersModal" class="modal">
             <div style="width: 100%; display: flex; justify-content: center;"><button id="othersClose" class="close">fechar</button></div>
-            <p>AAAAAA</p>
+            <h2 style="margin: 10px" id="unavailable">Em breve</h2>
         </div>
     </div>
     <script src="projects.js"></script>
