--- a/about.html
+++ b/about.html
@@ -15,21 +15,21 @@
     
     <div id="lower" class="navegation">
         <p class="stamp">f</p>
-        <a href="index.html">Home</a>
-        <a href="contact.html">Contato</a>
-        <a href="projects.html">Projetos</a>
-        <a href="about.html">Sobre mim</a>
+        <a href="index.html">home</a>
+        <a href="contact.html">contato</a>
+        <a href="projects.html">projetos</a>
+        <a href="about.html">sobre mim</a>
     </div>
     
     <div class="middle">
-        <h2>Sobre mim</h2>
+        <h2>sobre mim</h2>
         <h3 style="text-align: end;">Programadora em formação, ilustradora freelancer e cantora de chuveiro.</h3>
         <br/><br/>
         <div style="display: inline">
             <h3 style="display: inline">Ainda curioso? Que tal<br/> ler o</h3>
-            <button onclick="location.href='assets/curriculo.PDF'" style="display: inline">meu currículo</button>
+            <a href="assets/curriculo.PDF" target="_blank" style="display: inline">meu currículo</a>
             <h3 style="display: inline">ou ouvir as</h3>
-            <button onclick="location.href='https://open.spotify.com/user/外国人の魔女'">minhas playlists?</button>
+            <a href="https://open.spotify.com/user/外国人の魔女" target="_blank" style="display: inline">minhas playlists?</a>
         </div>
 
     <div id="about"></div>
