--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-    <title>Bloom</title>
+    <title>bloom</title>
     <link href='style.css' rel='stylesheet' type='text/css' />
 
 </head>
@@ -14,9 +14,9 @@
     <div id="border"></div>
     
     <div class="navegation">
-        <a href="about.html">Sobre mim</a>
-        <a href="projects.html">Projetos</a>
-        <a href="contact.html">Contato</a>
+        <a href="about.html">sobre mim</a>
+        <a href="projects.html">projetos</a>
+        <a href="contact.html">contato</a>
         <p class="stamp">f</p>
     </div>
 
@@ -26,7 +26,7 @@
     <h3 id="whiteline" class="intro">oi, eu sou amanda.<br/>mas pode me chamar de</h3>
     <h1 id="whiteline" class="name">BLO<span style="font-family: Night; font-size: 81%;">O</span>M!</h1>
 
-    <h3 class="intro">oi, eu sou Amanda,<br/>mas pode me chamar de</h3>
+    <h3 class="intro">oi, eu sou amanda,<br/>mas pode me chamar de</h3>
     <h1 class="name">BLO<span style="font-family: Night; font-size: 81%;">O</span>M!</h1>
 
     <div id="about"></div>
