--- a/projects.html
+++ b/projects.html
@@ -15,29 +15,29 @@
     
     <div id="lower" class="navegation">
         <p class="stamp">f</p>
-        <a href="index.html">Home</a>
-        <a href="contact.html">Contato</a>
-        <a href="projects.html">Projetos</a>
-        <a href="about.html">Sobre mim</a>
+        <a href="index.html">home</a>
+        <a href="contact.html">contato</a>
+        <a href="projects.html">projetos</a>
+        <a href="about.html">sobre mim</a>
     </div>
     
     <div class="middle">
 
-        <h2>Projetos</h2>
+        <h2>meus projetos</h2>
         <br/><br/>
-        <button id="devBtn" onclick="openDev()">_______Programação</button>
+        <button id="devBtn" onclick="openDev()">_______programação</button>
         <div style="display: none;" id="dev">
             <a id="contactListBtn">Lista de contatos</a><span style="font-size: 170%;"> <<</span><br/>
             <a id="dressUpBtn">Jogo de vestir</a><span style="font-size: 170%;"> <<</span><br/>
             <a id="ecommerceBtn">E-commerce</a><span style="font-size: 170%;"> <<</span><br/>
             </div>
-        <button id="wireframesBtn" class="underlined" onclick="openWireframes()">________Wireframes</button>
+        <button id="wireframesBtn" class="underlined" onclick="openWireframes()">________wireframes</button>
         <div style="display: none;" id="wireframes">
             <a id="mapModalBtn">Mapa campus</a><span style="font-size: 170%;"> <<</span><br/>
             <a id="diModalBtn">DI Direto</a><span style="font-size: 170%;"> <<</span><br/>
         </div>
-        <button id="devBtn" onclick="openDrawings()">_______Ilustrações</button>
-        <button id="devBtn" onclick="openOthers()">____________Outros</button>
+        <button id="devBtn" onclick="openDrawings()">_______ilustrações</button>
+        <button id="devBtn" onclick="openOthers()">____________outros</button>
     </div>
 
     <div id="modalBackground" onclick="close()">
@@ -47,9 +47,9 @@
             <img class="projectImg" src="assets/contacts.png"/>
             <h3 style="font-weight: normal"><b>Tecnologias utilizadas:</b> HTML, CSS, JavaScript</h3>
             <div style="display: inline;">
-                <a style="display: inline;" class="linkHover" href="https://amndrocha.github.io/CRUD-Contatos/">Deploy</a>
+                <a style="display: inline;" class="linkHover" target="_blank" href="https://amndrocha.github.io/CRUD-Contatos/">Deploy</a>
                 <h3 style="display: inline;"> // </h3>
-                <a style="display: inline;" class="linkHover" href="https://github.com/amndrocha/CRUD-Contatos">Código fonte</a>
+                <a style="display: inline;" class="linkHover" target="_blank" href="https://github.com/amndrocha/CRUD-Contatos">Código fonte</a>
             </div>
         </div>
         <div id="dressUpModal" class="modal">
@@ -60,7 +60,7 @@
             <div style="display: inline;">
                 <a style="display: inline;" id="unavailable">Deploy</a>
                 <h3 style="display: inline;"> // </h3>
-                <a style="display: inline;" class="linkHover" href="https://github.com/amndrocha/Jogo-de-vestir">Código fonte</a>
+                <a style="display: inline;" class="linkHover" target="_blank" href="https://github.com/amndrocha/Jogo-de-vestir">Código fonte</a>
             </div>
         </div>
         <div id="ecommerceModal" class="modal">
@@ -71,7 +71,7 @@
             <div style="display: inline;">
                 <a style="display: inline;" id="unavailable">Deploy</a>
                 <h3 style="display: inline;"> // </h3>
-                <a style="display: inline;" class="linkHover" href="">Código fonte</a>
+                <a style="display: inline;" class="linkHover" target="_blank" href="">Código fonte</a>
             </div>
         </div>
         <div id="mapModal" class="modal">
@@ -80,9 +80,9 @@
             <img class="projectImg" src="assets/map.png"/>
             <h3 style="font-weight: normal"><b>Descrição:</b> Wireframes criadas para projeto de aplicativo de navegação acessível pelo campus da PUC-Rio.</h3>
             <div style="display: inline;">
-                <a style="display: inline;" class="linkHover" href="https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=wireframes%20e%20molic%20-%20subgrupo%201.drawio#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D1MHzIo-Lrab8iHoO62nN6uhHW72ZEAqcg%26export%3Ddownload">Diagrama MOLIC</a>
+                <a style="display: inline;" class="linkHover" target="_blank" href="https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=wireframes%20e%20molic%20-%20subgrupo%201.drawio#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D1MHzIo-Lrab8iHoO62nN6uhHW72ZEAqcg%26export%3Ddownload">Diagrama MOLIC</a>
                 <h3 style="display: inline;"> // </h3>
-                <a style="display: inline;" class="linkHover" href="https://www.figma.com/file/wNNeuRm7cpIP7x6tOtvuIn/Projeto-Mapa-PUC?type=design&mode=design&t=LnVhE9KQcGUqipWH-1">Projeto Figma</a>
+                <a style="display: inline;" class="linkHover" target="_blank" href="https://www.figma.com/file/wNNeuRm7cpIP7x6tOtvuIn/Projeto-Mapa-PUC?type=design&mode=design&t=LnVhE9KQcGUqipWH-1">Projeto Figma</a>
             </div>
         </div>
         <div id="diModal" class="modal">
@@ -93,16 +93,17 @@
             <div style="display: inline;">
                 <a style="display: inline;" id="unavailable">Diagrama MOLIC</a>
                 <h3 style="display: inline;"> // </h3>
-                <a style="display: inline;" class="linkHover" href="https://www.figma.com/file/VCrRV3juys8yKs529AsodN/Wireframes---DI-Direto?type=design&node-id=0%3A1&mode=design&t=LnVhE9KQcGUqipWH-1">Projeto Figma</a>
+                <a style="display: inline;" class="linkHover" target="_blank" href="https://www.figma.com/file/VCrRV3juys8yKs529AsodN/Wireframes---DI-Direto?type=design&node-id=0%3A1&mode=design&t=LnVhE9KQcGUqipWH-1">Projeto Figma</a>
             </div>
         </div>
         <div id="drawingsModal" class="modal">
             <div style="width: 100%; display: flex; justify-content: center;"><button id="drawingsClose" class="close">fechar</button></div>
             <div id="drawings">
                 <button onclick="left()" id="left" class="imgArrow"><</button>
-                <div id="drawingBox"><img  id="drawingView"src="assets/drawings/0.jpeg"/></div>                
+                <div id="drawingBox"><img  id="drawingView"src="assets/drawings/0.jpeg"/></div>               
                 <button onclick="right()" class="imgArrow">></button>
             </div>
+            <h3 id="count" style="color: white">1/7</h3>
         </div>
         <div id="othersModal" class="modal">
             <div style="width: 100%; display: flex; justify-content: center;"><button id="othersClose" class="close">fechar</button></div>
