--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-    <title>bloom</title>
+    <title>Bloom</title>
     <link href='style.css' rel='stylesheet' type='text/css' />
 
 </head>
@@ -30,6 +30,11 @@
     <h1 class="name">BLO<span style="font-family: Night; font-size: 81%;">O</span>M!</h1>
 
     <div id="about"></div>
+
+    <div id="loading">
+        <h3 style="color: white">Loading <span id="percent"></span></h3>
+    </div>
+
     <script src="script.js"></script>
 
 </body>
