Resolvi bugs no load

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
 
     <div id="about"></div>
 
-    <div id="loading">
-        <h3 style="color: white">Loading <span id="percent"></span></h3>
-    </div>
+    <div id="loading"><h3 style="color: white">Loading <span id="percent"></span></h3></div>
 
     <script src="script.js"></script>
 
