--- a/projects.html
+++ b/projects.html
@@ -110,6 +110,9 @@
             <h2 style="margin: 10px" id="unavailable">Em breve</h2>
         </div>
     </div>
+
+    <div id="loading"><h3 style="color: white">Loading <span id="percent"></span></h3></div>
+    
     <script src="projects.js"></script>
 
 </body>
